--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 
+main {
+    background-image: url(/images/bg.png);
+    background-blend-mode: overlay;
+    background-size: 20%;
+    background-color: rgba(255,255,255,90%);
+
+}
